# agf

./: .gitignore  README.md  git_repo.py  main.py  pyproject.toml  sample.agf.yaml
.opencode/: settings.json
af/: __init__.py
agent/: __init__.py  base.py  claude_code.py  exceptions.py  opencode.py  runner.py
agent_commands/: chore.md  clean_worktree.md  create-commit.md  feature.md  install.md
agf/: installer.py
agf_commands/: build.md  chore.md  create-commit.md  create-github-pr.md  empty-commit.md  feature.md  plan.md  test-prompt.md
app/: README.md  package-lock.json  package.json
examples/: summarize_project_claude.py  summarize_project_opencode.py  test_workflow_handler.py
prompts/: af-cron-trigger.md  af-tasks-management-coded.md  agf-add-agents-template.md  agf-create-sdlc-prompt-wrappers.md  agf-cron-trigger.md  agf-improve-next-task-selection.md  agf-multi-level-configs.md  agf-process-tasks-trigger.md  agf-refactor-installer-for-skills.md  agf-return-json-result-from-prompt.md  agf-tasks-management-coded.md  agf-tasks-management-refresh.md  agf-workflow-task-handler.md  agf-worktree-apis.md  agf-worktree-id.md
specs/: agf-001-plan-agent-wrapper.md  agf-006-chore-remove-agf-id.md  agf-007-chore-improve-task-selection.md  agf-008-feature-tasks-manager-refresh.md  agf-011-feature-multi-level-configs.md  agf-013-plan-workflow-task-handler.md  agf-014-chore-branch-naming-pattern.md  agf-015-plan-json-result-extraction.md  agf-016-plan-unify-prompt-processing.md  agf-017-chore-cli-config-agent-model-overrides.md  agf-018-plan-sdlc-prompt-wrappers.md  (+37 more)
(+119 files in other folders)
