[project]
name = "agentic-flow"
version = "0.1.0"
description = "Agentic Flow - orchestration layer for AI coding agents"
requires-python = ">=3.12"
dependencies = [
    "click>=8.3.1",
    "gitpython>=3.1.46",
    "pydantic>=2.0.0",
    "pyyaml>=6.0.3",
    "schedule>=1.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-mock>=3.12.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[dependency-groups]
dev = [
    "pytest-asyncio>=1.3.0",
]
